--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div>
-        Hellow World from Aqeel Ahmed
+        Hellow World from <s>Aqeel</s></Aqeel> Ahmed!
     </div>
 </body>
 </html>
